tests/ui/attributes/inline-and-trackcaller.stderr
error[E0518]: attribute should be applied to function or closure
  --> $DIR/inline-and-trackcaller.rs:5:1
   |
LL | #[inline]
   | ^^^^^^^^^ not a function or closure

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0518`.
